[tool.poetry]
name = "teiphy"
version = "0.1.0"
description = "Converts TEI XML collations to NEXUS and other formats"
authors = ["Joey McCollum and Robert Turnbull"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.9.1"
numpy = "^1.23.2"
pandas = "^1.4.4"
openpyxl = "^3.0.10"
typer = "^0.6.1"
coverage = "^6.4.4"

[tool.poetry.dev-dependencies]
Sphinx = "^5.1.1"
sphinx-rtd-theme = "^1.0.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
