[tool.poetry]
name = "teiphy"
version = "0.1.11"
description = "Converts TEI XML collations to NEXUS and other formats"
authors = ["Joey McCollum and Robert Turnbull"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/jjmccollum/teiphy"
repository = "https://github.com/jjmccollum/teiphy"
documentation = "https://jjmccollum.github.io/teiphy/"
keywords = ["Python", "phylogenetics", "text encoding", "TEI", "NEXUS"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]


[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.9.3"
numpy = "^1.23.2"
pandas = "^1.4.4"
openpyxl = "^3.0.10"
typer = "^0.6.1"
rich = "^12.5.1"
python-slugify = "^6.1.2"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
Sphinx = "^5.1.1"
pytest = "^7.2.0"
coverage = "^6.4.4"
nbsphinx = "^0.8.9"
sphinx-rtd-theme = "^1.0.0"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.15.0"
sphinx-copybutton = "^0.4.0"
black = "^22.3.0"
sphinxcontrib-bibtex = "^2.4.1"
sphinx-click = {git = "https://github.com/rbturnbull/sphinx-click.git"}


[tool.black]
line-length = 120
skip_string_normalization = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
teiphy = "teiphy.main:app"
