[tool.poetry]
name = "teiphy"
version = "0.1.25"
description = "Converts TEI XML collations to NEXUS and other formats"
authors = ["Joey McCollum and Robert Turnbull"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/jjmccollum/teiphy"
repository = "https://github.com/jjmccollum/teiphy"
documentation = "https://jjmccollum.github.io/teiphy/"
keywords = ["Python", "phylogenetics", "text encoding", "TEI", "NEXUS"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
lxml = ">=4.9.3"
numpy = ">=1.23.2"
pandas = ">=1.4.4"
openpyxl = ">=3.0.10"
tqdm = ">=4.67.3"
typer = ">=0.6.1"
rich = ">=12.5.1"
python-slugify = ">=6.1.2"
Jinja2 = ">=3.1.6"
setuptools = ">=70.0.0"
h11 = ">=0.16.0"

[tool.poetry.group.dev.dependencies]
Sphinx = ">=7.0.0"
pytest = ">=9.0.3"
coverage = ">=6.4.4"
filelock = ">=3.20.3"
nbsphinx = ">=0.9.6"
nbconvert = ">=7.17.0"
sphinx-rtd-theme = ">=1.0.0"
sphinx-autobuild = ">=2021.3.14"
pre-commit = ">=2.15.0"
sphinx-copybutton = ">=0.4.0"
black = ">=25.11.1"
sphinxcontrib-bibtex = ">=2.4.1"
sphinx-click = {git = "https://github.com/rbturnbull/sphinx-click.git"}
starlette = ">=0.49.1"
tornado = ">=6.5.5"
pygments = ">=2.20.0"
requests = ">=2.33.0"
idna = ">=3.7"
urllib3 = ">=2.6.3"
virtualenv = ">=20.36.1"
zipp = ">=3.19.1"


[tool.black]
line-length = 120
skip_string_normalization = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
teiphy = "teiphy.main:app"
